// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Line className="my-classname" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg my-classname uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line className="test-classname" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg test-classname uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="brown" 1`] = `
<Fragment>
  <div
    className="color-schema-brown uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="brown-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-brown-rich uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="cyan" 1`] = `
<Fragment>
  <div
    className="color-schema-cyan uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="cyan-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-cyan-rich uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="default" 1`] = `
<Fragment>
  <div
    className="color-schema-default uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="green" 1`] = `
<Fragment>
  <div
    className="color-schema-green uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="green-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-green-rich uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="grey" 1`] = `
<Fragment>
  <div
    className="color-schema-grey uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="grey-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-grey-rich uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="orange" 1`] = `
<Fragment>
  <div
    className="color-schema-orange uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="orange-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-orange-rich uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="pink" 1`] = `
<Fragment>
  <div
    className="color-schema-pink uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="pink-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-pink-rich uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="purple" 1`] = `
<Fragment>
  <div
    className="color-schema-purple uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="purple-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-purple-rich uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="red" 1`] = `
<Fragment>
  <div
    className="color-schema-red uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="red-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-red-rich uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="yellow" 1`] = `
<Fragment>
  <div
    className="color-schema-yellow uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line colorSchema="yellow-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-yellow-rich uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line controlled=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line controlled=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line default props 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line disabled=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line disabled=false 3`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line disabled=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-common-disabled uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Line disabled=true 3`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-common-disabled uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Line docKit examples UU5.Bricks.Line should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="iiROOT"
  style={Object {}}
  title={null}
>
  <Paragraph
    id="uuID01"
    key="uuID01"
  />
  <Line
    colorSchema="primary"
    id="uuID02"
    key="uuID02"
    size="s"
  />
  <Paragraph
    key="uu5-content-2"
  />
  <Line
    colorSchema="green-rich"
    id="uuID03"
    key="uuID03"
  />
  <Paragraph
    id="uuID04"
    key="uuID04"
  />
  <Line
    colorSchema="warning"
    id="uuID05"
    key="uuID05"
    size="l"
  />
  <Paragraph
    id="uuID06"
    key="uuID06"
  />
  <Line
    colorSchema="red-rich"
    id="uuID07"
    key="uuID07"
    size="xl"
  />
</div>
`;

exports[`UU5.Bricks.Line elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line fullTextSearchPriority=0 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu-fulltextsearch-0 uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line hidden=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line hidden=false 3`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line hidden=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-common-hidden uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line hidden=true 3`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-common-hidden uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line id="myId" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="myId"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line id="test-id" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="test-id"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line mainAttrs=undefined 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line name="myName" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    name="myName"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line nestingLevel="bigBox" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line nestingLevel="bigBoxCollection" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line nestingLevel="box" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line nestingLevel="box" 3`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line nestingLevel="boxCollection" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line nestingLevel="container" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line nestingLevel="inline" 1`] = `<Fragment />`;

exports[`UU5.Bricks.Line nestingLevel="inline" 3`] = `<Fragment />`;

exports[`UU5.Bricks.Line nestingLevel="page" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line nestingLevel="smallBox" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line nestingLevel="smallBoxCollection" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line nestingLevel="spa" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line noIndex=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line noIndex=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-noindex uu-fulltextsearch-0 uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line noPrint=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line noPrint=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line pureRender=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line pureRender=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line selected=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line selected=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-common-selected uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line size="l" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-l"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line size="m" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line size="s" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line size="xl" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-xl"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line style="padding:8px; borderRadius: 2px" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line style={"backgroundColor":"red","color":"blue"} 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line style={"margin":8} 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={
      Object {
        "margin": 8,
      }
    }
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Line tooltip="My Tooltip" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-line uu5-common-bg uu5-bricks-line-size-m"
    id="uuID"
    style={Object {}}
    title="My Tooltip"
  />
</Fragment>
`;
